--- a/index.html
+++ b/index.html
@@ -1,20 +1,101 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel</title>
     <link rel="stylesheet" href="estilo/style.css">
 </head>
+
 <body>
-    <div>
-        <h1>LOREN</h1>
-        <P>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim assumenda dolores sequi a sapiente quos nam exercitationem aliquid molestias fugit nesciunt, tenetur ipsum ullam facilis quibusdam amet vel aliquam magnam.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi magni praesentium unde veritatis sapiente rerum repellat consectetur nemo corrupti nostrum suscipit quis dicta quisquam, fugit error culpa perspiciatis? Quam, provident.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem incidunt suscipit ducimus tempore explicabo libero blanditiis iste! Natus omnis molestias neque, voluptatibus odio cum accusamus! Eveniet corporis repudiandae voluptas accusantium!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem iure molestiae corporis officia tempore eveniet impedit ut consequuntur ratione praesentium voluptate eos, beatae et ullam voluptatibus porro, consectetur vel? Commodi!
-        </P>
-    </div>
+    <header>
+        <h1>
+            Cordel Moderno
+        </h1>
+        <p>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
+        </p>
+    </header>
+
+    <section>
+        <p>
+            Estou ficando cansado <br>
+            Da tal tecnologia <br>
+            Só se fala por e-mail <br>
+            Mensagem curta e fria <br>
+            Twitter e Facebook <br>
+            Antes que eu caduque <br>
+            Vou dizer tudo em poesia.
+        </p>
+    </section>
+
+    <section>
+        <p>
+            Não é mais como era antes <br>
+            É tudo abreviado <br>
+            "Você" só tem duas letras <br>
+            O "O" e o "E" foi riscado <br>
+            Para declarar o amor <br>
+            Basta botar uma flor <br>
+            E um coração desenhado.
+        </p>
+    </section>
+
+    <section>
+        <p>
+            Arroba agora não pesa <br>
+            É parte de um endereço <br>
+            Ponto final nem se usa <br>
+            Ou vai até no começo <br>
+            Agora é .com <br>
+            Se o saite é muito bom <br>
+            Ele vale um alto preço. <br>
+            Pra piorar a liguagem <br>
+            O emoticom é um risco <br>
+            Tem símbolo para tudo <br>
+            Ponto e vírgula e um asterisco <br>
+            Um beijo significa <br>
+            Pra entender como fica <br>
+            Decifre esse rabisco.
+        </p>
+    </section>
+
+    <section>
+        <p>
+            Tenho saudade das cartas <br>
+            Escritas com a própria mão <br>
+            Mandava no mês de Junho <br>
+            Só chegava no Verão <br>
+            Mas matava a saudade <br>
+            Era texto de verdade <br>
+            Nas linhas do coração. <br>
+        </p>
+    </section>
+
+    <section>
+        <p>
+            Agora, escrevo e envio <br>
+            Chegando na mesma hora <br>
+            Mas quando vou prosear <br>
+            A pessoa foi embora <br>
+            Abriu outro aplicativo <br>
+            O mundo ficou cativo <br>
+            Da tecnologia do agora. <br>
+            Felizmente, pra orar <br>
+            Não precisa de internet <br>
+            Deus escuta todo mundo <br>
+            Se quiser, faça esse teste <br>
+            Dois pontos são dois joelhos <br>
+            Seus lábios são aparelhos <br>
+            Deixe que Deus interprete. <br>
+        </p>
+    </section>
+
+    <footer>
+        <p>Site criado por <a href="imagens/CVA120.jpg" target="_blank">Blade CA120</a></p>
+    </footer>
+
 </body>
+
 </html>
