--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -50,7 +50,9 @@
             Ou vai até no começo <br>
             Agora é .com <br>
             Se o saite é muito bom <br>
-            Ele vale um alto preço. <br>
+            Ele vale um alto preço.
+        </p>
+        <p>
             Pra piorar a liguagem <br>
             O emoticom é um risco <br>
             Tem símbolo para tudo <br>
@@ -61,15 +63,14 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
             Mandava no mês de Junho <br>
             Só chegava no Verão <br>
             Mas matava a saudade <br>
-            Era texto de verdade <br>
-            Nas linhas do coração. <br>
+            Era texto de verdade
         </p>
     </section>
 
@@ -81,14 +82,15 @@
             A pessoa foi embora <br>
             Abriu outro aplicativo <br>
             O mundo ficou cativo <br>
-            Da tecnologia do agora. <br>
+            Da tecnologia do agora.
+        </p>
+        <p>
             Felizmente, pra orar <br>
             Não precisa de internet <br>
             Deus escuta todo mundo <br>
             Se quiser, faça esse teste <br>
             Dois pontos são dois joelhos <br>
-            Seus lábios são aparelhos <br>
-            Deixe que Deus interprete. <br>
+            Seus lábios são aparelhos
         </p>
     </section>
 
